<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/pref_general" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="autocheck"
            android:persistent="true"
            android:summary="@string/pref_check_summary"
            android:title="@string/pref_check_title" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="autoupdate"
            android:persistent="true"
            android:summary="@string/pref_autoupdate_summary"
            android:title="@string/pref_autoupdate_title" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="wifi_only"
            android:persistent="true"
            android:title="Wifi only" />
    </PreferenceCategory>
    <PreferenceCategory android:title="Автор додатку" >
        <Preference android:title="Олег Байдалка" />
    </PreferenceCategory>
    <PreferenceCategory android:title="Подяка за допомогу" >
        <Preference android:title="Олександра Чучко" />
    </PreferenceCategory>

</PreferenceScreen>